# PRODHugs

./: .env.example  .gitignore  AGENTS.md  README.md  alloy-config.alloy  compose-dev.yml  compose.yml  nginx-dev.conf  nginx.conf
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose-dev.yml  compose.yml  flake.nix  go.mod  go.sum  oapi-codegen.yml
backend/api/: openapi-v2.yaml  openapi.yaml
backend/cmd/: main.go
backend/internal/app/: app.go
backend/internal/config/: config.go
backend/internal/errorz/: hug.go  user.go
backend/internal/jwt/: manager.go
backend/internal/metrics/: metrics.go
backend/internal/models/: balance.go  daily_reward.go  hug.go  intimacy.go  leaderboard.go  streak.go  user.go
backend/internal/repository/: transactor.go
backend/internal/telegram/: bot.go  client.go  linkstore.go  loginstore.go  notifier.go  verify.go
backend/internal/ws/: hub.go
backend/migrations/: 00001_users.sql  00002_hugs_system.sql  00003_user_gender.sql  00004_user_banned.sql  00005_hug_suggestions.sql  00006_performance_indexes.sql  00007_hug_slots.sql  00008_user_blocks.sql  00009_refresh_tokens.sql  00010_add_user_created_at.sql  00011_add_user_display_name.sql  00012_user_telegram_id.sql  00013_hug_cooldowns_cascade.sql  00014_intimacy.sql  00015_hug_type.sql  00016_backfill_intimacy.sql  00017_user_tag.sql  00018_hug_comments.sql  00019_special_tag.sql  00020_pair_streaks.sql  00021_hug_streak_tier.sql  00022_announcements.sql  00023_sudoku_captcha.sql  00024_sudoku_target_id.sql  00025_sudoku_personal_cooldown.sql  00026_add_casino_captcha.sql  00027_user_promotion.sql  00028_promotion_auction.sql  00029_vip_time_budget.sql  00030_user_notes.sql
backend/pkg/crypto/: hash.go
backend/pkg/swagger-ui/: ui.go
backend/src/: cache.rs  config.rs  crypto.rs  db.rs  error.rs  jwt.rs  lib.rs  main.rs  metrics.rs  sudoku.rs  ws.rs
(+226 files in other folders)
