[package]
name = "prodhugs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
publish = false

[[bin]]
name = "prodhugs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = { version = "0.8", features = ["macros", "ws", "http2"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
cookie = { version = "0.18", features = ["secure"] }
bytes = "1"
time = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
http = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Auth / crypto
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Identifiers / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }

# HTTP client (for Telegram)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Config / env
dotenvy = "0.15"
envy = "0.4"

# Utilities
once_cell = "1"
governor = "0.6"
nonzero_ext = "0.3"
parking_lot = "0.12"
itertools = "0.13"
percent-encoding = "2"
url = "2"
mime = "0.3"
regex = "1"
unicode-segmentation = "1"
